--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -10,7 +10,7 @@
 
 <div>
     <p><strong>이름:</strong> {{pokemon.name}}</p>
-    <img src="{{pokemon.imageUrl}}" alt="{{pokemon.name}} 이미지"/>
+    <img src="{{pokemon.imageUrl}}" alt="{{pokemon.name}} 이미지입니다."/>
     <p><strong>키:</strong> {{pokemon.height}}</p>
     <p><strong>무게:</strong> {{pokemon.weight}}</p>
     <p><strong>속성:</strong> {{#pokemon.types}}<span>{{.}}</span> {{/pokemon.types}}</p>
