--- a/src/main/resources/templates/layouts/footer.mustache
+++ b/src/main/resources/templates/layouts/footer.mustache
@@ -1,2 +1,8 @@
-</body>
+        </div>
+        <div id="mask" style="display: none;"></div>
+        <div id="loadingImg" style="display: none;">
+            <img src="/assets/image/loading.gif?animation=spin" alt="Loading">
+        </div>
+        <span id="toast">This is a toast message!</span>
+    </body>
 </html>
