--- a/src/main/resources/templates/layouts/header.mustache
+++ b/src/main/resources/templates/layouts/header.mustache
@@ -1,7 +1,26 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>포켓몬스터</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="initial-scale=1.0,user-scalable=no,maximum-scale=1,width=device-width">
+    <title>자바 - 포켓몬스터 시물레이션</title>
+<!--    <link rel="icon" href="/favicon.ico">-->
+    <meta name="subject" content="자바공부 포켓몬스터 시물레이션" />
+    <meta name="title" content="자바공부 포켓몬스터 시물레이션" />
+    <meta name="author" content="자바공부 포켓몬스터 시물레이션">
+    <meta name="description" content="포켓몬스터와 함께하는 자바공부!"/>
+
+    <link rel="stylesheet" type="text/css" href="/assets/css/reset.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/animation.css">
+    <link rel="stylesheet" type="text/css" href="/assets/css/common.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.8.2/css/all.min.css"/>
+    <link rel="stylesheet" type="text/css" href="/assets/css/bootstrap-3.3.2.min.css"/>
+
+    <script type="text/javascript" src="/assets/js/jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="/assets/js/bootstrap-3.3.2.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.2.0/socket.io.js"></script>
+    <script type="text/javascript" src="/assets/js/sweetalert2.all.min.js"></script>
+    <script type="text/javascript" src="/assets/js/common.js"></script>
+    <script type="text/javascript" src="/assets/js/util.js"></script>
 </head>
 <body>
+    <div id="mainContainer">
