--- a/src/main/resources/templates/home.mustache
+++ b/src/main/resources/templates/home.mustache
@@ -1,21 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Random Pokemon</title>
-</head>
-<body>
-<h1>Random Pokemon</h1>
+{{>layouts/header}}
 
-<div>
-    <p><strong>이름:</strong> {{pokemon.name}}</p>
-    <img src="{{pokemon.imageUrl}}" alt="{{pokemon.name}} 이미지입니다."/>
-    <p><strong>키:</strong> {{pokemon.height}}</p>
-    <p><strong>무게:</strong> {{pokemon.weight}}</p>
-    <p><strong>속성:</strong> {{#pokemon.types}}<span>{{.}}</span> {{/pokemon.types}}</p>
-    <p><strong>특성:</strong> {{#pokemon.abilities}}<span>{{.}}</span> {{/pokemon.abilities}}</p>
-<!--    <p><strong>기술:</strong> {{#pokemon.moves}}<span>{{.}}</span> {{/pokemon.moves}}</p>-->
-</div>
-</body>
-</html>
+{{>poke/battle}}
+{{>poke/field}}
+{{>poke/myPoke}}
+{{>poke/pokeInfo}}
+
+{{>layouts/footer}}
