Spring Poke - API

--- a/src/main/resources/templates/poke/field.mustache
+++ b/src/main/resources/templates/poke/field.mustache
@@ -1,7 +1,7 @@
 <div id="field" class="sideView show">
     <div class="btnBox">
         <a onclick="common.showView('myPoke')">내가 잡은 포켓몬</a>
-        <a href="/signIn">로그아웃</a>
+        <a href="/logout">로그아웃</a>
     </div>
     <div class="gameContainer">
         <canvas id="gameCanvas" width="800" height="600"></canvas>
