--- a/src/main/resources/templates/admin/home.mustache
+++ b/src/main/resources/templates/admin/home.mustache
@@ -1,73 +1,27 @@
 {{>layouts/header}}
 
 <div id="question">
+    <span style="float: right;"><a href="/logout">로그아웃</a></span>
     <h3>질문등록</h3>
-    <div class="inputWrap">
-        <input type="text" placeholder="질문을 입력하세요.">
-        <button>등록</button>
-    </div>
+    <br>
 
-    <h4>1. 자바 프로그래밍을 하기위한 개발도구는 (          )이다.</h4>
-    <hr>
-    <h4>2. 프로그램 또는 <span>(            )</span>는 컴퓨터가 이해하고 처리할 수 있는 일련의 명령들이다.</h4>
-    <hr>
-    <h4>3. 자바 소스 파일의 확장자는 (      )이고 컴파일된 코드의 확장자는 (       )이다. </h4>
-    <hr>
-    <h4>4. 자바 프로그램은 클래스 선언으로 시작하며, 이 안에 (                  )등을 모두 선언한다.</h4>
-    <hr>
-    <h4>5. (         )클래스를 이용하면 자바에서 쉽게 키 입력을 받을 수 있다.</h4>
-    <hr>
-    <h4>6. 상수는 (        )키워드를 이용하며 초깃값과 함께 선언하며, 프로그램 실행 중에 값이 바뀔 수 없다.</h4>
-    <hr>
-    <h4>7. case문의 값으로는 (          )만 사용할 수있으며, 변수나 식은 사용할 수없다. </h4>
-    <hr>
-    <h4>8. 자바의 반복문은 (      )문, while문, (          )문의 3가지다.</h4>
-    <hr>
-    <h4>9. (        ) 문은 하나의 반복문을 빠져나갈때 사용한다.</h4>
-    <hr>
-    <h4>10. 배열을 만드는 과정은 배열 래퍼런스 변수 선언과 (         )의 두 과정으로 이루어진다.</h4>
-    <hr>
-    <h4>11. 자바는 응용프로그램이 예외를 처리할수 있게 (               )문을 사용한다.</h4>
-    <hr>
-    <h4>12. 자바에서는 (      )연산자를 사용하여 객체를 생성한다.</h4>
-    <hr>
-    <h4>13. 클래스 멤버의 접근 지정자는 public, (        ), (         )이다.</h4>
-    <hr>
-    <h4>14. (          )멤버는 객체를 생성하지 않고도 사용할 수 있다.</h4>
-    <hr>
-    <h4>15. 자바에서 상속은 (   ) 클래스의 필드와 메소드를 (   )클래스에게 물려주는 것이다.  </h4>
-    <hr>
-    <h4>16. 슈퍼클래스의 (       )의 멤버는 패키지 소속과 상관없이 서브 클래스에서 접근이 가능하며 동일한 패키지내의 클래스에서도 접근이 가능하다.</h4>
-    <hr>
-    <h4>17. 슈퍼클래스에 선언된 메소드를 서브 클래스에서 재정의하는 것을 (          )이라고 한다.</h4>
-    <hr>
-    <h4>18. 서브 클래스 객체는 슈퍼 클래스 타입으로 자동 타입 변환이 가능하며 이를 (         )이라고 한다.</h4>
-    <hr>
-    <h4>19. 추상 메소드는 실행코드 값이 원형만 미완성 메소드이며, 반드시 메소드 이름 앞에 (         )를 붙여 선언하여야 한다.</h4>
-    <hr>
-    <h4>20. 자바 소스 파일의 맨 첫줄에 (         )키워드를 이용하여 클래스가 어떤 패키지에 속할지 선언한다.</h4>
-    <hr>
-    <h4>21. 모든 자바 클래스는 (         )클래스를 상속받는다.</h4>
-    <hr>
-    <h4>22. Integer n =  Interger.value(5) (         )
-        <br>int x = n.intValue(5) (        )
-    </h4>
-    <hr>
-    <h4>23. (      )은 일반화시킨 타입의 매개변수를 이용하여 클래스, 인터페이스, 메소드를 일반화시키는 기법이다. </h4>
-    <hr>
-    <h4>24. (      )은 요소들의 리스트나 집합을 관리하는 자료구조로서 크기를 자동 조절하므로, 배열과 달리 요소의 개수에 신경 쓸 필요는 없다.</h4>
-    <hr>
-    <h4>25. HaspMap(K,V)는 (   )와 (   )의 쌍을 하나의 원소로 다루는 해시맵 컬렉션이다. </h4>
-    <hr>
-    <h4>26. (         )란 이벤트를 발생시킨 GUI 컴포넌트를 말한다.</h4>
-    <hr>
-    <h4>27. (          )란 이벤트를 처리하는 코드이고, (         )란 발생한 이벤트에 관한 여러 정보를 가진 객체로써 이벤트 발생시 (          )에게 전달된다.</h4>
-    <hr>
-    <h4>28. 입력된 키를 판별하기 위해서는 입력된 키 코드값과 (        )값을 비교하여야 한다. 이들은 KeyEvent 클래스의 상수로 선언되어 있다.</h4>
-    <hr>
-    <h4>29. (           )란 스윙 컴포넌트의 슈퍼 클래스로서 컴포넌트의 모양, 상태, 크기, 위치, 컨테이너와의 관계 등에 관련한 많은 공통 메소드를 제공한다.</h4>
-    <hr>
-    <h4>30. (         )버튼은 (             )을 이용하여 생성하며, 여러개의 (       )버튼으로 구성되는 버튼 그룹 중 오직 하나만 선택된다.</h4>
+    <form action="/admin/createJavaQuestion" method="post">
+        <h4>질문</h4>
+        <input type="text" name="title" class="question" placeholder="질문을 입력하세요." required>
+
+        <h4>정답</h4>
+        <div class="inputWrap">
+            <input type="text" name="answer" placeholder="정답을 입력하세요." required>
+            <button type="submit">등록</button>
+        </div>
+    </form>
+
+    {{#javaQuestionList}}
+        <h4>{{title}}</h4> <!-- 각 질문의 title 출력 -->
+        <p>{{answer}}</p> <!-- 각 질문의 answer 출력 -->
+        <hr/> <!-- 구분선 -->
+    {{/javaQuestionList}}
+
 </div>
 
 {{>layouts/footer}}
