--- a/src/main/resources/templates/poke/field.mustache
+++ b/src/main/resources/templates/poke/field.mustache
@@ -40,6 +40,7 @@
         pokeballY = Math.random() * (canvas.height - pokeballHeight);
     }
 
+    common.showView('field');
     placePokeball();
     gameLoop();
 
@@ -55,7 +56,7 @@
         }
     });
 
-    function gameLoop() {
+    async function gameLoop() {
         const speed = 5;
 
         if (keys.ArrowUp && characterY > 0) {
@@ -77,7 +78,15 @@
 
         // Alt키 입력 시 포켓볼을 획득
         if (keys.Alt && distance < 45) {
-            common.showView('battle');
+            const getRandomPokeRes = await util.fetchJsonData('/poke/getRandomPoke', {});
+            const getJavaQuestionRes = await util.fetchJsonData('/poke/getJavaQuestion', {});
+
+            if(!getRandomPokeRes.result || !getJavaQuestionRes.result) {
+                util.showToastMsg("정보를 가져오는 중 문제가 발생하였습니다.", "W");
+            }else {
+                settingPokemon(getRandomPokeRes.data);
+                settingQuestion(getJavaQuestionRes.data);
+            }
             placePokeball();
             keys.Alt = false; // F키가 눌리면 다시 false로 설정
         }
